# MKLiveSdk

./: .gitignore  settings.gradle
MKLiveSdk/: CMakeLists.txt  build.gradle
MKLiveSdk/libs/armeabi/pkgconfig/: libavcodec.pc  libavdevice.pc  libavresample.pc  libpostproc.pc  libswscale.pc
MKLiveSdk/src/main/cpp/: AudioUtils.cpp  AudioUtils.h  NDKImpl.cpp  PrivateUtils.h  VideoUtils.h
MKLiveSdk/src/main/java/com/mikiller/ndk/mklivesdk/: CameraUtils.java  MKLiveActivity.java  NDKImpl.java  OldCameraUtils.java
MKLiveSdk/src/main/java/com/mikiller/ndktest/ndkapplication/: AudioUtils.java  MKLiveActivity.java  OldCameraUtils.java  convertWavUitl.java
MKLiveSdk/src/main/res/layout/: activity_camera.xml  activity_main.xml
app/: .gitignore  CMakeLists.txt  build.gradle  ndk_h_creater.bat
app/libs/armeabi-v7a/pkgconfig/: libavcodec.pc  libavdevice.pc  libavformat.pc  libavutil.pc  libswscale.pc
app/libs/armeabi/include/libavutil/: log.h
app/libs/armeabi/pkgconfig/: libavcodec.pc  libavformat.pc  libavutil.pc  libswresample.pc  x264.pc
app/libs/include/libavutil/: common.h
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioUtils.cpp  AudioUtils.h  NDKImpl.cpp  NDKImpl.h  PrivateUtils.h  Test.cpp  Test.h  Utils.h  VideoUtils.cpp  VideoUtils.h  native-lib.cpp  native-lib.h
app/src/main/java/com/mikiller/ndktest/ndkapplication/: AudioUtils.java  CameraActivity.java  CameraUtils.java  MKLiveSDK.java  MainActivity.java  NDKImpl.java  OldCameraUtils.java  YUVUtils.java
app/src/main/res/drawable/: selector_camera_play.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: styles.xml
app/src/test/java/com/mikiller/ndktest/ndkapplication/: ExampleUnitTest.java
ffmpegLib/armeabi-v7a/armeabi-v7a/lib/pkgconfig/: libavfilter.pc  libpostproc.pc  libswresample.pc
ffmpegLib/armeabi/armeabi/lib/pkgconfig/: libavdevice.pc  libavfilter.pc  libpostproc.pc  libswscale.pc
live_sdk/: ndk_h_creater.bat  proguard-rules.pro
live_sdk/libs/armeabi/pkgconfig/: libavfilter.pc
live_sdk/src/androidTest/java/com/mikiller/ndk/mklivesdk/: ExampleInstrumentedTest.java
live_sdk/src/main/: AndroidManifest.xml
live_sdk/src/main/cpp/: NDKImpl.h
live_sdk/src/main/java/com/mikiller/ndk/mklivesdk/: AudioUtils.java  CameraUtils.java  MKLiveActivity.java  MKLiveSDK.java  OldCameraUtils.java  convertWavUitl.java
live_sdk/src/main/res/drawable/: shape_live_switch.xml
live_sdk/src/main/res/values/: strings.xml
sample/: build.gradle
sample/src/androidTest/java/com/mikiller/sample/: ExampleInstrumentedTest.java
sample/src/main/: AndroidManifest.xml
sample/src/main/java/com/mikiller/sample/: MainActivity.java
sample/src/main/res/layout/: activity_main.xml
sample/src/test/java/com/mikiller/sample/: ExampleUnitTest.java
